# isef-brainbear

./: .gitignore  .replit  README.md  app.py  database.db  database.py  decorators.py  pyproject.toml  quiz.py  sonar-project.properties  students.sqlite3
.github/workflows/: main_brainbear-super-app.yml
static/: styles.css
templates/: about.html  add_modules.html  add_moduls.html  add_questions.html  added.html  dashboard.html  database.html  edit_modules.html  edit_questions.html  error.html  home.html  index.html  layout.html  list.html  login.html  multi.html  new.html  play.html  rank.html  signup.html  single.html
