[tool.poetry]
name = "repl_python3_isef-brainbear"
version = "0.1.0"
description = ""
authors = ["lomma01 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
Authlib = "^0.15.5"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
